change navbar, and fix spacing

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -30,3 +30,8 @@
   border-radius: 25px;
   padding: 20px;
 }
+
+
+.show-pokemon {
+  margin-left: 40%;
+}
